# rnf

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
docs/: architecture.md  language-reference.md
example/: hello_world.rnf
src/: ast.rs  codegen.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
